[package]
name = "bin-tracer"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-core = "0.1"
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] } # Use some compact format later
tracing-serde-structured = { version = "0.4.0", features = ["postcard-schema"] }
# tracing-serde = "0.2.0"

[lints]
workspace = true
