[package]
name = "installer-downloader"
description = "A secure minimal web installer for the Mullvad app"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
anyhow = "1.0"
winres = "0.1"
windows-sys = { version = "0.52.0", features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

mullvad-update = { path = "../mullvad-update" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi"] }
native-windows-gui = { version = "1.0.12", features = ["image-decoder"] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"
nsvg = "0.5.1"
objc_id = "0.1"

[dev-dependencies]
tokio = { workspace = true, features =  ["test-util"] }

[package.metadata.winres]
LegalCopyright = "(c) 2025 Mullvad VPN AB"

[package.metadata.bundle]
#name =
identifier = "net.mullvad.downloader"
#icon =
#version = 
#resources =
#script =
#copyright =
#
#short_description =
#long_description =

[profile.release]
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

# ignored, use
# RUSTFLAGS="-C codegen-units=1 -C panic=abort -C strip=symbols -C opt-level=z" cargo run --bin installer-downloader --release
# these flags lower the binary size by ~1 MiB (2.7 -> 1.7)
