[package]
name = "installer-downloader"
description = "A secure minimal web installer for the Mullvad app"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
anyhow = { workspace = true }
winres = "0.1"
windows-sys = { workspace = true, features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
async-trait = "0.1"
rand = { version = "0.8.5" }
serde = { workspace = true, features = ["derive"] }

mullvad-update = { path = "../mullvad-update", features = ["client", "native-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi"] }
native-windows-gui = { version = "1.0.12", features = ["frame", "image-decoder", "progress-bar"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"
objc_id = "0.1"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features =  ["test-util", "macros"] }
insta = { workspace = true, features = ["yaml"] }

[package.metadata.winres]
LegalCopyright = "(c) 2025 Mullvad VPN AB"
