[package]
name = "installer-downloader"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true
description = "A secure minimal web installer for the Mullvad app"
repository.workspace = true
license.workspace = true
publish = false

[package.metadata.winres]
LegalCopyright = "(c) 2026 Mullvad VPN AB"

[build-dependencies]
anyhow = { workspace = true }
windows-sys = { workspace = true, features = [
  "Win32_System",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices"
] }
winres = "0.1"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
mullvad-update = { path = "../mullvad-update", features = ["client"] }
mullvad-version = { path = "../mullvad-version" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
talpid-platform-metadata = { path = "../talpid-platform-metadata" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "test-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"
objc_id = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
mullvad-paths = { path = "../mullvad-paths" }
native-windows-gui = { version = "1.0.12", default-features = false, features = [
  "embed-resource",
  "frame",
  "image-decoder",
  "progress-bar"
] }
windows-sys = { workspace = true, features = [
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging"
] }

[lints]
workspace = true
