[package]
name = "leak-checker"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
eyre = "0.6.12"
socket2 = { version = "0.5.7", features = ["all"] }
match_cfg = "0.1.0"
pnet_packet = "0.35.0"
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["macros", "time", "rt", "sync", "net"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "*", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
talpid-windows = { path = "../talpid-windows" }

[lints]
workspace = true
