[package]
name = "leak-checker"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["am-i-mullvad"]
am-i-mullvad = ["dep:reqwest"]

[dependencies]
log.workspace = true
anyhow.workspace = true
socket2 = { workspace = true, features = ["all"] }
pnet_packet.workspace = true
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["macros", "time", "rt", "sync", "net", "process"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }

reqwest = { version = "0.12.9", optional = true, default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["net", "socket", "uio"] }

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
talpid-windows = { path = "../talpid-windows" }

[lints]
workspace = true
