[package]
name = "libmaybenot"
description = "A small FFI wrapper around maybenot"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
maybenot = "1.1.0"
thiserror.workspace = true

[lints]
workspace = true
