[package]
name = "libmaybenot"
description = "A small FFI wrapper around maybenot"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.82"
maybenot = "1.1.0"

[lints]
workspace = true
