[package]
name = "mullvad-api"
edition.workspace = true
rust-version.workspace = true
description = "Mullvad VPN API clients. Providing an interface to query our infrastructure for information."
repository.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"], optional = true }
futures = { workspace = true }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["client-pool"] }
ipnetwork = { workspace = true }
libc = "0.2"
log = { workspace = true }
mullvad-api-constants = { path = "./mullvad-api-constants" }
mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
mullvad-fs = { path = "../mullvad-fs" }
mullvad-types = { path = "../mullvad-types" }
mullvad-version = { path = "../mullvad-version" }
rustls-pki-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
shadowsocks = { workspace = true, features = ["stream-cipher"] }
talpid-time = { path = "../talpid-time" }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-socks = "0.5.1"
tower = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { version = "1.4.1", features = ["v4"] }
vec1 = { workspace = true, features = ["serde"] }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
mockito = "1.6.1"
talpid-time = { path = "../talpid-time", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "time"] }

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
mullvad-update = { path = "../mullvad-update", features = ["client"] }

[features]
# Allow the API server to use to be configured via MULLVAD_API_HOST and MULLVAD_API_ADDR.
api-override = []
domain-fronting = ["clap", "tracing-subscriber", "webpki-roots"]

[lints]
workspace = true
