[package]
name = "mullvad-api"
edition.workspace = true
rust-version.workspace = true
description = "Mullvad VPN API clients. Providing an interface to query our infrastructure for information."
repository.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"], optional = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { workspace = true }
ipnetwork = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
mullvad-api-constants = { path = "./mullvad-api-constants" }
mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
mullvad-fs = { path = "../mullvad-fs" }
mullvad-types = { path = "../mullvad-types" }
mullvad-version = { path = "../mullvad-version" }
rustls-pki-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
shadowsocks = { workspace = true, features = ["stream-cipher"] }
talpid-time = { path = "../talpid-time" }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tokio-rustls = { workspace = true, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-socks = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
vec1 = { workspace = true, features = ["serde"] }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
mockito = { workspace = true }
talpid-time = { path = "../talpid-time", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "time"] }

[build-dependencies]
cbindgen = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
mullvad-update = { path = "../mullvad-update", features = ["client"] }

[features]
# Allow the API server to use to be configured via MULLVAD_API_HOST and MULLVAD_API_ADDR.
api-override = []
domain-fronting = ["clap", "tracing-subscriber", "webpki-roots"]

[lints]
workspace = true
