[package]
name = "mullvad-cli"
edition.workspace = true
rust-version.workspace = true
description = "Manage the Mullvad VPN daemon via a convenient CLI"
repository.workspace = true
license.workspace = true

[package.metadata.winres]
ProductName = "Mullvad VPN"
CompanyName = "Mullvad VPN AB"
LegalCopyright = "(c) 2026 Mullvad VPN AB"
InternalName = "mullvad-cli"
OriginalFilename = "mullvad.exe"

[[bin]]
name = "mullvad"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mullvad-management-interface = { path = "../mullvad-management-interface" }
mullvad-types = { path = "../mullvad-types", features = ["clap"] }
mullvad-version = { path = "../mullvad-version" }
natord = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
clap_complete = { workspace = true }
nix = { workspace = true, features = ["signal"] }

[target.'cfg(windows)'.build-dependencies]
mullvad-version = { path = "../mullvad-version" }
winres = { workspace = true }

[target.'cfg(windows)'.build-dependencies.windows-sys]
workspace = true
features = [
  "Win32_System_SystemServices",
]

[lints]
workspace = true
